--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     Theme name: Nginxy
     Theme author: @lfelipe1501
 \*------------------------------------*/
-@import url('//fonts.googleapis.com/css?family=Open+Sans');
+@import url('//fonts.loli.net/css?family=Open+Sans');
 /* Have to use @import for the font, as you can only specify a single stylesheet */
 * {
     margin:0;
